// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parser properties of type  Limited Concept  1`] = `
LimitedTest {
  "$$owner": TestParserModel {
    "$$owner": null,
    "$$propertyIndex": undefined,
    "$$propertyName": "",
    "$id": "ID-1",
    "$typename": "TestParserModel",
    "_FRE_lim": [Circular],
    "_FRE_parts": null,
    "_FRE_prim": null,
    "_FRE_primWith": null,
    "_FRE_ref": null,
  },
  "$$propertyIndex": undefined,
  "$$propertyName": "lim",
  "$id": "ID-5",
  "$typename": "LimitedTest",
  "_FRE_limitedNonOpt": LimitedNonOptional {
    "$$owner": [Circular],
    "$$propertyIndex": undefined,
    "$$propertyName": "limitedNonOpt",
    "$id": "ID-2",
    "$typename": "LimitedNonOptional",
    "_FRE_other": FreNodeReference {
      "$$owner": [Circular],
      "$$propertyIndex": undefined,
      "$$propertyName": "other",
      "_FRE_pathname": Array [
        "FIRST",
      ],
      "_FRE_referred": OtherLimited {
        "$$owner": null,
        "$$propertyIndex": undefined,
        "$$propertyName": "",
        "$id": "ID-4",
        "$typename": "OtherLimited",
        "_FRE_name": "FIRST",
      },
      "typeName": "OtherLimited",
    },
    "_FRE_otherMulti": Array [
      FreNodeReference {
        "$$owner": [Circular],
        "$$propertyIndex": 0,
        "$$propertyName": "otherMulti",
        "_FRE_pathname": Array [
          "SECOND",
        ],
        "_FRE_referred": OtherLimited {
          "$$owner": null,
          "$$propertyIndex": undefined,
          "$$propertyName": "",
          "$id": "ID-5",
          "$typename": "OtherLimited",
          "_FRE_name": "SECOND",
        },
        "typeName": "OtherLimited",
      },
      FreNodeReference {
        "$$owner": [Circular],
        "$$propertyIndex": 1,
        "$$propertyName": "otherMulti",
        "_FRE_pathname": Array [
          "FIRST",
        ],
        "_FRE_referred": OtherLimited {
          "$$owner": null,
          "$$propertyIndex": undefined,
          "$$propertyName": "",
          "$id": "ID-4",
          "$typename": "OtherLimited",
          "_FRE_name": "FIRST",
        },
        "typeName": "OtherLimited",
      },
      FreNodeReference {
        "$$owner": [Circular],
        "$$propertyIndex": 2,
        "$$propertyName": "otherMulti",
        "_FRE_pathname": Array [
          "FIRST",
        ],
        "_FRE_referred": OtherLimited {
          "$$owner": null,
          "$$propertyIndex": undefined,
          "$$propertyName": "",
          "$id": "ID-4",
          "$typename": "OtherLimited",
          "_FRE_name": "FIRST",
        },
        "typeName": "OtherLimited",
      },
      FreNodeReference {
        "$$owner": [Circular],
        "$$propertyIndex": 3,
        "$$propertyName": "otherMulti",
        "_FRE_pathname": Array [
          "SECOND",
        ],
        "_FRE_referred": OtherLimited {
          "$$owner": null,
          "$$propertyIndex": undefined,
          "$$propertyName": "",
          "$id": "ID-5",
          "$typename": "OtherLimited",
          "_FRE_name": "SECOND",
        },
        "typeName": "OtherLimited",
      },
      FreNodeReference {
        "$$owner": [Circular],
        "$$propertyIndex": 4,
        "$$propertyName": "otherMulti",
        "_FRE_pathname": Array [
          "SECOND",
        ],
        "_FRE_referred": OtherLimited {
          "$$owner": null,
          "$$propertyIndex": undefined,
          "$$propertyName": "",
          "$id": "ID-5",
          "$typename": "OtherLimited",
          "_FRE_name": "SECOND",
        },
        "typeName": "OtherLimited",
      },
    ],
    "_FRE_visMulti": Array [
      FreNodeReference {
        "$$owner": [Circular],
        "$$propertyIndex": 0,
        "$$propertyName": "visMulti",
        "_FRE_pathname": Array [
          "+",
        ],
        "_FRE_referred": VisibilityKind {
          "$$owner": null,
          "$$propertyIndex": undefined,
          "$$propertyName": "",
          "$id": "ID-1",
          "$typename": "VisibilityKind",
          "_FRE_name": "+",
        },
        "typeName": "VisibilityKind",
      },
      FreNodeReference {
        "$$owner": [Circular],
        "$$propertyIndex": 1,
        "$$propertyName": "visMulti",
        "_FRE_pathname": Array [
          "+",
        ],
        "_FRE_referred": VisibilityKind {
          "$$owner": null,
          "$$propertyIndex": undefined,
          "$$propertyName": "",
          "$id": "ID-1",
          "$typename": "VisibilityKind",
          "_FRE_name": "+",
        },
        "typeName": "VisibilityKind",
      },
      FreNodeReference {
        "$$owner": [Circular],
        "$$propertyIndex": 2,
        "$$propertyName": "visMulti",
        "_FRE_pathname": Array [
          "+",
        ],
        "_FRE_referred": VisibilityKind {
          "$$owner": null,
          "$$propertyIndex": undefined,
          "$$propertyName": "",
          "$id": "ID-1",
          "$typename": "VisibilityKind",
          "_FRE_name": "+",
        },
        "typeName": "VisibilityKind",
      },
    ],
    "_FRE_visMultiWithExtra": Array [
      FreNodeReference {
        "$$owner": [Circular],
        "$$propertyIndex": 0,
        "$$propertyName": "visMultiWithExtra",
        "_FRE_pathname": Array [
          "-",
        ],
        "_FRE_referred": VisibilityKind {
          "$$owner": null,
          "$$propertyIndex": undefined,
          "$$propertyName": "",
          "$id": "ID-2",
          "$typename": "VisibilityKind",
          "_FRE_name": "-",
        },
        "typeName": "VisibilityKind",
      },
      FreNodeReference {
        "$$owner": [Circular],
        "$$propertyIndex": 1,
        "$$propertyName": "visMultiWithExtra",
        "_FRE_pathname": Array [
          "+",
        ],
        "_FRE_referred": VisibilityKind {
          "$$owner": null,
          "$$propertyIndex": undefined,
          "$$propertyName": "",
          "$id": "ID-1",
          "$typename": "VisibilityKind",
          "_FRE_name": "+",
        },
        "typeName": "VisibilityKind",
      },
      FreNodeReference {
        "$$owner": [Circular],
        "$$propertyIndex": 2,
        "$$propertyName": "visMultiWithExtra",
        "_FRE_pathname": Array [
          "-",
        ],
        "_FRE_referred": VisibilityKind {
          "$$owner": null,
          "$$propertyIndex": undefined,
          "$$propertyName": "",
          "$id": "ID-2",
          "$typename": "VisibilityKind",
          "_FRE_name": "-",
        },
        "typeName": "VisibilityKind",
      },
    ],
    "_FRE_visWithExtra": FreNodeReference {
      "$$owner": [Circular],
      "$$propertyIndex": undefined,
      "$$propertyName": "visWithExtra",
      "_FRE_pathname": Array [
        "-",
      ],
      "_FRE_referred": VisibilityKind {
        "$$owner": null,
        "$$propertyIndex": undefined,
        "$$propertyName": "",
        "$id": "ID-2",
        "$typename": "VisibilityKind",
        "_FRE_name": "-",
      },
      "typeName": "VisibilityKind",
    },
    "_FRE_visibility": FreNodeReference {
      "$$owner": [Circular],
      "$$propertyIndex": undefined,
      "$$propertyName": "visibility",
      "_FRE_pathname": Array [
        "+",
      ],
      "_FRE_referred": VisibilityKind {
        "$$owner": null,
        "$$propertyIndex": undefined,
        "$$propertyName": "",
        "$id": "ID-1",
        "$typename": "VisibilityKind",
        "_FRE_name": "+",
      },
      "typeName": "VisibilityKind",
    },
    "parseLocation": FreParseLocation {
      "column": 19,
      "line": 2,
    },
  },
  "_FRE_limitedOpt": LimitedOptional {
    "$$owner": [Circular],
    "$$propertyIndex": undefined,
    "$$propertyName": "limitedOpt",
    "$id": "ID-3",
    "$typename": "LimitedOptional",
    "_FRE_visMulti": Array [
      FreNodeReference {
        "$$owner": [Circular],
        "$$propertyIndex": 0,
        "$$propertyName": "visMulti",
        "_FRE_pathname": Array [
          "#",
        ],
        "_FRE_referred": null,
        "typeName": "VisibilityKind",
      },
    ],
    "_FRE_visMultiWithExtra": Array [
      FreNodeReference {
        "$$owner": [Circular],
        "$$propertyIndex": 0,
        "$$propertyName": "visMultiWithExtra",
        "_FRE_pathname": Array [
          "-",
        ],
        "_FRE_referred": VisibilityKind {
          "$$owner": null,
          "$$propertyIndex": undefined,
          "$$propertyName": "",
          "$id": "ID-2",
          "$typename": "VisibilityKind",
          "_FRE_name": "-",
        },
        "typeName": "VisibilityKind",
      },
      FreNodeReference {
        "$$owner": [Circular],
        "$$propertyIndex": 1,
        "$$propertyName": "visMultiWithExtra",
        "_FRE_pathname": Array [
          "-",
        ],
        "_FRE_referred": VisibilityKind {
          "$$owner": null,
          "$$propertyIndex": undefined,
          "$$propertyName": "",
          "$id": "ID-2",
          "$typename": "VisibilityKind",
          "_FRE_name": "-",
        },
        "typeName": "VisibilityKind",
      },
      FreNodeReference {
        "$$owner": [Circular],
        "$$propertyIndex": 2,
        "$$propertyName": "visMultiWithExtra",
        "_FRE_pathname": Array [
          "-",
        ],
        "_FRE_referred": VisibilityKind {
          "$$owner": null,
          "$$propertyIndex": undefined,
          "$$propertyName": "",
          "$id": "ID-2",
          "$typename": "VisibilityKind",
          "_FRE_name": "-",
        },
        "typeName": "VisibilityKind",
      },
    ],
    "_FRE_visWithExtra": FreNodeReference {
      "$$owner": [Circular],
      "$$propertyIndex": undefined,
      "$$propertyName": "visWithExtra",
      "_FRE_pathname": Array [
        "-",
      ],
      "_FRE_referred": VisibilityKind {
        "$$owner": null,
        "$$propertyIndex": undefined,
        "$$propertyName": "",
        "$id": "ID-2",
        "$typename": "VisibilityKind",
        "_FRE_name": "-",
      },
      "typeName": "VisibilityKind",
    },
    "_FRE_visibility": FreNodeReference {
      "$$owner": [Circular],
      "$$propertyIndex": undefined,
      "$$propertyName": "visibility",
      "_FRE_pathname": Array [
        "+",
      ],
      "_FRE_referred": VisibilityKind {
        "$$owner": null,
        "$$propertyIndex": undefined,
        "$$propertyName": "",
        "$id": "ID-1",
        "$typename": "VisibilityKind",
        "_FRE_name": "+",
      },
      "typeName": "VisibilityKind",
    },
    "parseLocation": FreParseLocation {
      "column": 16,
      "line": 12,
    },
  },
  "_FRE_limitedOpt2": LimitedOptional {
    "$$owner": [Circular],
    "$$propertyIndex": undefined,
    "$$propertyName": "limitedOpt2",
    "$id": "ID-4",
    "$typename": "LimitedOptional",
    "_FRE_visMulti": Array [],
    "_FRE_visMultiWithExtra": Array [],
    "parseLocation": FreParseLocation {
      "column": 17,
      "line": 18,
    },
  },
  "_FRE_name": "anyNameWillDo",
  "parseLocation": FreParseLocation {
    "column": 1,
    "line": 1,
  },
}
`;

exports[`Parser properties of type  Part  1`] = `
PartsTest {
  "$$owner": TestParserModel {
    "$$owner": null,
    "$$propertyIndex": undefined,
    "$$propertyName": "",
    "$id": "ID-1",
    "$typename": "TestParserModel",
    "_FRE_lim": null,
    "_FRE_parts": [Circular],
    "_FRE_prim": null,
    "_FRE_primWith": null,
    "_FRE_ref": null,
  },
  "$$propertyIndex": undefined,
  "$$propertyName": "parts",
  "$id": "ID-7",
  "$typename": "PartsTest",
  "_FRE_directParts": WithDirectParts {
    "$$owner": [Circular],
    "$$propertyIndex": undefined,
    "$$propertyName": "directParts",
    "$id": "ID-6",
    "$typename": "WithDirectParts",
    "_FRE_optList": Array [],
    "_FRE_optPart": null,
    "_FRE_part": PartConcept {
      "$$owner": [Circular],
      "$$propertyIndex": undefined,
      "$$propertyName": "part",
      "$id": "ID-2",
      "$typename": "PartConcept",
      "_FRE_content": "stringLiteral",
      "_FRE_optContent": 10,
      "_FRE_visibility": FreNodeReference {
        "$$owner": [Circular],
        "$$propertyIndex": undefined,
        "$$propertyName": "visibility",
        "_FRE_pathname": Array [
          "+",
        ],
        "_FRE_referred": VisibilityKind {
          "$$owner": null,
          "$$propertyIndex": undefined,
          "$$propertyName": "",
          "$id": "ID-1",
          "$typename": "VisibilityKind",
          "_FRE_name": "+",
        },
        "typeName": "VisibilityKind",
      },
      "parseLocation": FreParseLocation {
        "column": 25,
        "line": 3,
      },
    },
    "_FRE_partList": Array [
      PartConcept {
        "$$owner": [Circular],
        "$$propertyIndex": 0,
        "$$propertyName": "partList",
        "$id": "ID-3",
        "$typename": "PartConcept",
        "_FRE_content": "otherString",
        "_FRE_optContent": 0,
        "_FRE_visibility": FreNodeReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "visibility",
          "_FRE_pathname": Array [
            "#",
          ],
          "_FRE_referred": VisibilityKind {
            "$$owner": null,
            "$$propertyIndex": undefined,
            "$$propertyName": "",
            "$id": "ID-3",
            "$typename": "VisibilityKind",
            "_FRE_name": "#",
          },
          "typeName": "VisibilityKind",
        },
        "parseLocation": FreParseLocation {
          "column": 25,
          "line": 9,
        },
      },
      PartConcept {
        "$$owner": [Circular],
        "$$propertyIndex": 1,
        "$$propertyName": "partList",
        "$id": "ID-4",
        "$typename": "PartConcept",
        "_FRE_content": "stringLiteralXXX",
        "_FRE_optContent": 123,
        "_FRE_visibility": FreNodeReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "visibility",
          "_FRE_pathname": Array [
            "-",
          ],
          "_FRE_referred": VisibilityKind {
            "$$owner": null,
            "$$propertyIndex": undefined,
            "$$propertyName": "",
            "$id": "ID-2",
            "$typename": "VisibilityKind",
            "_FRE_name": "-",
          },
          "typeName": "VisibilityKind",
        },
        "parseLocation": FreParseLocation {
          "column": 25,
          "line": 13,
        },
      },
      PartConcept {
        "$$owner": [Circular],
        "$$propertyIndex": 2,
        "$$propertyName": "partList",
        "$id": "ID-5",
        "$typename": "PartConcept",
        "_FRE_content": "stringLiteralYYY",
        "_FRE_optContent": 0,
        "_FRE_visibility": FreNodeReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "visibility",
          "_FRE_pathname": Array [
            "+",
          ],
          "_FRE_referred": VisibilityKind {
            "$$owner": null,
            "$$propertyIndex": undefined,
            "$$propertyName": "",
            "$id": "ID-1",
            "$typename": "VisibilityKind",
            "_FRE_name": "+",
          },
          "typeName": "VisibilityKind",
        },
        "parseLocation": FreParseLocation {
          "column": 25,
          "line": 17,
        },
      },
    ],
    "parseLocation": FreParseLocation {
      "column": 14,
      "line": 2,
    },
  },
  "_FRE_name": "myName",
  "_FRE_partsOfParts": null,
  "parseLocation": FreParseLocation {
    "column": 1,
    "line": 1,
  },
}
`;

exports[`Parser properties of type  Part and Sub Parts  1`] = `
PartsTest {
  "$$owner": TestParserModel {
    "$$owner": null,
    "$$propertyIndex": undefined,
    "$$propertyName": "",
    "$id": "ID-1",
    "$typename": "TestParserModel",
    "_FRE_lim": null,
    "_FRE_parts": [Circular],
    "_FRE_prim": null,
    "_FRE_primWith": null,
    "_FRE_ref": null,
  },
  "$$propertyIndex": undefined,
  "$$propertyName": "parts",
  "$id": "ID-39",
  "$typename": "PartsTest",
  "_FRE_directParts": WithDirectParts {
    "$$owner": [Circular],
    "$$propertyIndex": undefined,
    "$$propertyName": "directParts",
    "$id": "ID-6",
    "$typename": "WithDirectParts",
    "_FRE_optList": Array [],
    "_FRE_optPart": null,
    "_FRE_part": PartConcept {
      "$$owner": [Circular],
      "$$propertyIndex": undefined,
      "$$propertyName": "part",
      "$id": "ID-2",
      "$typename": "PartConcept",
      "_FRE_content": "stringLiteral",
      "_FRE_optContent": 10,
      "_FRE_visibility": FreNodeReference {
        "$$owner": [Circular],
        "$$propertyIndex": undefined,
        "$$propertyName": "visibility",
        "_FRE_pathname": Array [
          "+",
        ],
        "_FRE_referred": VisibilityKind {
          "$$owner": null,
          "$$propertyIndex": undefined,
          "$$propertyName": "",
          "$id": "ID-1",
          "$typename": "VisibilityKind",
          "_FRE_name": "+",
        },
        "typeName": "VisibilityKind",
      },
      "parseLocation": FreParseLocation {
        "column": 25,
        "line": 3,
      },
    },
    "_FRE_partList": Array [
      PartConcept {
        "$$owner": [Circular],
        "$$propertyIndex": 0,
        "$$propertyName": "partList",
        "$id": "ID-3",
        "$typename": "PartConcept",
        "_FRE_content": "otherString",
        "_FRE_optContent": 0,
        "_FRE_visibility": FreNodeReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "visibility",
          "_FRE_pathname": Array [
            "#",
          ],
          "_FRE_referred": VisibilityKind {
            "$$owner": null,
            "$$propertyIndex": undefined,
            "$$propertyName": "",
            "$id": "ID-3",
            "$typename": "VisibilityKind",
            "_FRE_name": "#",
          },
          "typeName": "VisibilityKind",
        },
        "parseLocation": FreParseLocation {
          "column": 25,
          "line": 9,
        },
      },
      PartConcept {
        "$$owner": [Circular],
        "$$propertyIndex": 1,
        "$$propertyName": "partList",
        "$id": "ID-4",
        "$typename": "PartConcept",
        "_FRE_content": "stringLiteralXXX",
        "_FRE_optContent": 123,
        "_FRE_visibility": FreNodeReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "visibility",
          "_FRE_pathname": Array [
            "-",
          ],
          "_FRE_referred": VisibilityKind {
            "$$owner": null,
            "$$propertyIndex": undefined,
            "$$propertyName": "",
            "$id": "ID-2",
            "$typename": "VisibilityKind",
            "_FRE_name": "-",
          },
          "typeName": "VisibilityKind",
        },
        "parseLocation": FreParseLocation {
          "column": 25,
          "line": 13,
        },
      },
      PartConcept {
        "$$owner": [Circular],
        "$$propertyIndex": 2,
        "$$propertyName": "partList",
        "$id": "ID-5",
        "$typename": "PartConcept",
        "_FRE_content": "stringLiteralYYY",
        "_FRE_optContent": 0,
        "_FRE_visibility": FreNodeReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "visibility",
          "_FRE_pathname": Array [
            "+",
          ],
          "_FRE_referred": VisibilityKind {
            "$$owner": null,
            "$$propertyIndex": undefined,
            "$$propertyName": "",
            "$id": "ID-1",
            "$typename": "VisibilityKind",
            "_FRE_name": "+",
          },
          "typeName": "VisibilityKind",
        },
        "parseLocation": FreParseLocation {
          "column": 25,
          "line": 17,
        },
      },
    ],
    "parseLocation": FreParseLocation {
      "column": 14,
      "line": 2,
    },
  },
  "_FRE_name": "myName",
  "_FRE_partsOfParts": WithSubSubParts {
    "$$owner": [Circular],
    "$$propertyIndex": undefined,
    "$$propertyName": "partsOfParts",
    "$id": "ID-38",
    "$typename": "WithSubSubParts",
    "_FRE_optList": Array [],
    "_FRE_optPart": null,
    "_FRE_part": SubConcept {
      "$$owner": [Circular],
      "$$propertyIndex": undefined,
      "$$propertyName": "part",
      "$id": "ID-15",
      "$typename": "SubConcept",
      "_FRE_listSub": Array [
        WithDirectParts {
          "$$owner": [Circular],
          "$$propertyIndex": 0,
          "$$propertyName": "listSub",
          "$id": "ID-11",
          "$typename": "WithDirectParts",
          "_FRE_optList": Array [],
          "_FRE_optPart": null,
          "_FRE_part": PartConcept {
            "$$owner": [Circular],
            "$$propertyIndex": undefined,
            "$$propertyName": "part",
            "$id": "ID-9",
            "$typename": "PartConcept",
            "_FRE_content": "stringLiteralFGT",
            "_FRE_optContent": 10,
            "_FRE_visibility": FreNodeReference {
              "$$owner": [Circular],
              "$$propertyIndex": undefined,
              "$$propertyName": "visibility",
              "_FRE_pathname": Array [
                "+",
              ],
              "_FRE_referred": VisibilityKind {
                "$$owner": null,
                "$$propertyIndex": undefined,
                "$$propertyName": "",
                "$id": "ID-1",
                "$typename": "VisibilityKind",
                "_FRE_name": "+",
              },
              "typeName": "VisibilityKind",
            },
            "parseLocation": FreParseLocation {
              "column": 38,
              "line": 36,
            },
          },
          "_FRE_partList": Array [
            PartConcept {
              "$$owner": [Circular],
              "$$propertyIndex": 0,
              "$$propertyName": "partList",
              "$id": "ID-10",
              "$typename": "PartConcept",
              "_FRE_content": "otherStringZZZ",
              "_FRE_optContent": 0,
              "_FRE_visibility": FreNodeReference {
                "$$owner": [Circular],
                "$$propertyIndex": undefined,
                "$$propertyName": "visibility",
                "_FRE_pathname": Array [
                  "#",
                ],
                "_FRE_referred": VisibilityKind {
                  "$$owner": null,
                  "$$propertyIndex": undefined,
                  "$$propertyName": "",
                  "$id": "ID-3",
                  "$typename": "VisibilityKind",
                  "_FRE_name": "#",
                },
                "typeName": "VisibilityKind",
              },
              "parseLocation": FreParseLocation {
                "column": 37,
                "line": 42,
              },
            },
          ],
          "parseLocation": FreParseLocation {
            "column": 29,
            "line": 35,
          },
        },
        WithDirectParts {
          "$$owner": [Circular],
          "$$propertyIndex": 1,
          "$$propertyName": "listSub",
          "$id": "ID-14",
          "$typename": "WithDirectParts",
          "_FRE_optList": Array [],
          "_FRE_optPart": null,
          "_FRE_part": PartConcept {
            "$$owner": [Circular],
            "$$propertyIndex": undefined,
            "$$propertyName": "part",
            "$id": "ID-12",
            "$typename": "PartConcept",
            "_FRE_content": "stringLiteralZZZ",
            "_FRE_optContent": 1045,
            "_FRE_visibility": FreNodeReference {
              "$$owner": [Circular],
              "$$propertyIndex": undefined,
              "$$propertyName": "visibility",
              "_FRE_pathname": Array [
                "-",
              ],
              "_FRE_referred": VisibilityKind {
                "$$owner": null,
                "$$propertyIndex": undefined,
                "$$propertyName": "",
                "$id": "ID-2",
                "$typename": "VisibilityKind",
                "_FRE_name": "-",
              },
              "typeName": "VisibilityKind",
            },
            "parseLocation": FreParseLocation {
              "column": 38,
              "line": 48,
            },
          },
          "_FRE_partList": Array [
            PartConcept {
              "$$owner": [Circular],
              "$$propertyIndex": 0,
              "$$propertyName": "partList",
              "$id": "ID-13",
              "$typename": "PartConcept",
              "_FRE_content": "otherString",
              "_FRE_optContent": 0,
              "_FRE_visibility": FreNodeReference {
                "$$owner": [Circular],
                "$$propertyIndex": undefined,
                "$$propertyName": "visibility",
                "_FRE_pathname": Array [
                  "#",
                ],
                "_FRE_referred": VisibilityKind {
                  "$$owner": null,
                  "$$propertyIndex": undefined,
                  "$$propertyName": "",
                  "$id": "ID-3",
                  "$typename": "VisibilityKind",
                  "_FRE_name": "#",
                },
                "typeName": "VisibilityKind",
              },
              "parseLocation": FreParseLocation {
                "column": 37,
                "line": 54,
              },
            },
          ],
          "parseLocation": FreParseLocation {
            "column": 29,
            "line": 47,
          },
        },
      ],
      "_FRE_normalSub": WithDirectParts {
        "$$owner": [Circular],
        "$$propertyIndex": undefined,
        "$$propertyName": "normalSub",
        "$id": "ID-8",
        "$typename": "WithDirectParts",
        "_FRE_optList": Array [],
        "_FRE_optPart": null,
        "_FRE_part": PartConcept {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "part",
          "$id": "ID-7",
          "$typename": "PartConcept",
          "_FRE_content": "stringLiteral",
          "_FRE_optContent": 10,
          "_FRE_visibility": FreNodeReference {
            "$$owner": [Circular],
            "$$propertyIndex": undefined,
            "$$propertyName": "visibility",
            "_FRE_pathname": Array [
              "+",
            ],
            "_FRE_referred": VisibilityKind {
              "$$owner": null,
              "$$propertyIndex": undefined,
              "$$propertyName": "",
              "$id": "ID-1",
              "$typename": "VisibilityKind",
              "_FRE_name": "+",
            },
            "typeName": "VisibilityKind",
          },
          "parseLocation": FreParseLocation {
            "column": 46,
            "line": 26,
          },
        },
        "_FRE_partList": Array [],
        "parseLocation": FreParseLocation {
          "column": 32,
          "line": 25,
        },
      },
      "_FRE_optListSub": Array [],
      "_FRE_optionalSub": null,
      "parseLocation": FreParseLocation {
        "column": 15,
        "line": 24,
      },
    },
    "_FRE_partList": Array [
      SubConcept {
        "$$owner": [Circular],
        "$$propertyIndex": 0,
        "$$propertyName": "partList",
        "$id": "ID-28",
        "$typename": "SubConcept",
        "_FRE_listSub": Array [
          WithDirectParts {
            "$$owner": [Circular],
            "$$propertyIndex": 0,
            "$$propertyName": "listSub",
            "$id": "ID-27",
            "$typename": "WithDirectParts",
            "_FRE_optList": Array [],
            "_FRE_optPart": null,
            "_FRE_part": PartConcept {
              "$$owner": [Circular],
              "$$propertyIndex": undefined,
              "$$propertyName": "part",
              "$id": "ID-26",
              "$typename": "PartConcept",
              "_FRE_content": "stringLiteral",
              "_FRE_optContent": 10,
              "_FRE_visibility": FreNodeReference {
                "$$owner": [Circular],
                "$$propertyIndex": undefined,
                "$$propertyName": "visibility",
                "_FRE_pathname": Array [
                  "+",
                ],
                "_FRE_referred": VisibilityKind {
                  "$$owner": null,
                  "$$propertyIndex": undefined,
                  "$$propertyName": "",
                  "$id": "ID-1",
                  "$typename": "VisibilityKind",
                  "_FRE_name": "+",
                },
                "typeName": "VisibilityKind",
              },
              "parseLocation": FreParseLocation {
                "column": 30,
                "line": 113,
              },
            },
            "_FRE_partList": Array [],
            "parseLocation": FreParseLocation {
              "column": 21,
              "line": 112,
            },
          },
        ],
        "_FRE_normalSub": WithDirectParts {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "normalSub",
          "$id": "ID-20",
          "$typename": "WithDirectParts",
          "_FRE_optList": Array [],
          "_FRE_optPart": null,
          "_FRE_part": PartConcept {
            "$$owner": [Circular],
            "$$propertyIndex": undefined,
            "$$propertyName": "part",
            "$id": "ID-16",
            "$typename": "PartConcept",
            "_FRE_content": "stringLiteral",
            "_FRE_optContent": 10,
            "_FRE_visibility": FreNodeReference {
              "$$owner": [Circular],
              "$$propertyIndex": undefined,
              "$$propertyName": "visibility",
              "_FRE_pathname": Array [
                "+",
              ],
              "_FRE_referred": VisibilityKind {
                "$$owner": null,
                "$$propertyIndex": undefined,
                "$$propertyName": "",
                "$id": "ID-1",
                "$typename": "VisibilityKind",
                "_FRE_name": "+",
              },
              "typeName": "VisibilityKind",
            },
            "parseLocation": FreParseLocation {
              "column": 42,
              "line": 66,
            },
          },
          "_FRE_partList": Array [
            PartConcept {
              "$$owner": [Circular],
              "$$propertyIndex": 0,
              "$$propertyName": "partList",
              "$id": "ID-17",
              "$typename": "PartConcept",
              "_FRE_content": "otherString",
              "_FRE_optContent": 0,
              "_FRE_visibility": FreNodeReference {
                "$$owner": [Circular],
                "$$propertyIndex": undefined,
                "$$propertyName": "visibility",
                "_FRE_pathname": Array [
                  "#",
                ],
                "_FRE_referred": VisibilityKind {
                  "$$owner": null,
                  "$$propertyIndex": undefined,
                  "$$propertyName": "",
                  "$id": "ID-3",
                  "$typename": "VisibilityKind",
                  "_FRE_name": "#",
                },
                "typeName": "VisibilityKind",
              },
              "parseLocation": FreParseLocation {
                "column": 41,
                "line": 72,
              },
            },
            PartConcept {
              "$$owner": [Circular],
              "$$propertyIndex": 1,
              "$$propertyName": "partList",
              "$id": "ID-18",
              "$typename": "PartConcept",
              "_FRE_content": "stringLiteralXXX",
              "_FRE_optContent": 123,
              "_FRE_visibility": FreNodeReference {
                "$$owner": [Circular],
                "$$propertyIndex": undefined,
                "$$propertyName": "visibility",
                "_FRE_pathname": Array [
                  "-",
                ],
                "_FRE_referred": VisibilityKind {
                  "$$owner": null,
                  "$$propertyIndex": undefined,
                  "$$propertyName": "",
                  "$id": "ID-2",
                  "$typename": "VisibilityKind",
                  "_FRE_name": "-",
                },
                "typeName": "VisibilityKind",
              },
              "parseLocation": FreParseLocation {
                "column": 41,
                "line": 77,
              },
            },
            PartConcept {
              "$$owner": [Circular],
              "$$propertyIndex": 2,
              "$$propertyName": "partList",
              "$id": "ID-19",
              "$typename": "PartConcept",
              "_FRE_content": "stringLiteralYYY",
              "_FRE_optContent": 0,
              "_FRE_visibility": FreNodeReference {
                "$$owner": [Circular],
                "$$propertyIndex": undefined,
                "$$propertyName": "visibility",
                "_FRE_pathname": Array [
                  "+",
                ],
                "_FRE_referred": VisibilityKind {
                  "$$owner": null,
                  "$$propertyIndex": undefined,
                  "$$propertyName": "",
                  "$id": "ID-1",
                  "$typename": "VisibilityKind",
                  "_FRE_name": "+",
                },
                "typeName": "VisibilityKind",
              },
              "parseLocation": FreParseLocation {
                "column": 41,
                "line": 82,
              },
            },
          ],
          "parseLocation": FreParseLocation {
            "column": 31,
            "line": 65,
          },
        },
        "_FRE_optListSub": Array [],
        "_FRE_optionalSub": WithDirectParts {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "optionalSub",
          "$id": "ID-25",
          "$typename": "WithDirectParts",
          "_FRE_optList": Array [],
          "_FRE_optPart": null,
          "_FRE_part": PartConcept {
            "$$owner": [Circular],
            "$$propertyIndex": undefined,
            "$$propertyName": "part",
            "$id": "ID-21",
            "$typename": "PartConcept",
            "_FRE_content": "stringLiteral",
            "_FRE_optContent": 10,
            "_FRE_visibility": FreNodeReference {
              "$$owner": [Circular],
              "$$propertyIndex": undefined,
              "$$propertyName": "visibility",
              "_FRE_pathname": Array [
                "+",
              ],
              "_FRE_referred": VisibilityKind {
                "$$owner": null,
                "$$propertyIndex": undefined,
                "$$propertyName": "",
                "$id": "ID-1",
                "$typename": "VisibilityKind",
                "_FRE_name": "+",
              },
              "typeName": "VisibilityKind",
            },
            "parseLocation": FreParseLocation {
              "column": 42,
              "line": 89,
            },
          },
          "_FRE_partList": Array [
            PartConcept {
              "$$owner": [Circular],
              "$$propertyIndex": 0,
              "$$propertyName": "partList",
              "$id": "ID-22",
              "$typename": "PartConcept",
              "_FRE_content": "otherString",
              "_FRE_optContent": 0,
              "_FRE_visibility": FreNodeReference {
                "$$owner": [Circular],
                "$$propertyIndex": undefined,
                "$$propertyName": "visibility",
                "_FRE_pathname": Array [
                  "#",
                ],
                "_FRE_referred": VisibilityKind {
                  "$$owner": null,
                  "$$propertyIndex": undefined,
                  "$$propertyName": "",
                  "$id": "ID-3",
                  "$typename": "VisibilityKind",
                  "_FRE_name": "#",
                },
                "typeName": "VisibilityKind",
              },
              "parseLocation": FreParseLocation {
                "column": 41,
                "line": 95,
              },
            },
            PartConcept {
              "$$owner": [Circular],
              "$$propertyIndex": 1,
              "$$propertyName": "partList",
              "$id": "ID-23",
              "$typename": "PartConcept",
              "_FRE_content": "stringLiteralXXX",
              "_FRE_optContent": 123,
              "_FRE_visibility": FreNodeReference {
                "$$owner": [Circular],
                "$$propertyIndex": undefined,
                "$$propertyName": "visibility",
                "_FRE_pathname": Array [
                  "-",
                ],
                "_FRE_referred": VisibilityKind {
                  "$$owner": null,
                  "$$propertyIndex": undefined,
                  "$$propertyName": "",
                  "$id": "ID-2",
                  "$typename": "VisibilityKind",
                  "_FRE_name": "-",
                },
                "typeName": "VisibilityKind",
              },
              "parseLocation": FreParseLocation {
                "column": 41,
                "line": 100,
              },
            },
            PartConcept {
              "$$owner": [Circular],
              "$$propertyIndex": 2,
              "$$propertyName": "partList",
              "$id": "ID-24",
              "$typename": "PartConcept",
              "_FRE_content": "stringLiteralYYY",
              "_FRE_optContent": 0,
              "_FRE_visibility": FreNodeReference {
                "$$owner": [Circular],
                "$$propertyIndex": undefined,
                "$$propertyName": "visibility",
                "_FRE_pathname": Array [
                  "+",
                ],
                "_FRE_referred": VisibilityKind {
                  "$$owner": null,
                  "$$propertyIndex": undefined,
                  "$$propertyName": "",
                  "$id": "ID-1",
                  "$typename": "VisibilityKind",
                  "_FRE_name": "+",
                },
                "typeName": "VisibilityKind",
              },
              "parseLocation": FreParseLocation {
                "column": 41,
                "line": 105,
              },
            },
          ],
          "parseLocation": FreParseLocation {
            "column": 33,
            "line": 88,
          },
        },
        "parseLocation": FreParseLocation {
          "column": 17,
          "line": 64,
        },
      },
      SubConcept {
        "$$owner": [Circular],
        "$$propertyIndex": 1,
        "$$propertyName": "partList",
        "$id": "ID-37",
        "$typename": "SubConcept",
        "_FRE_listSub": Array [
          WithDirectParts {
            "$$owner": [Circular],
            "$$propertyIndex": 0,
            "$$propertyName": "listSub",
            "$id": "ID-34",
            "$typename": "WithDirectParts",
            "_FRE_optList": Array [],
            "_FRE_optPart": null,
            "_FRE_part": PartConcept {
              "$$owner": [Circular],
              "$$propertyIndex": undefined,
              "$$propertyName": "part",
              "$id": "ID-33",
              "$typename": "PartConcept",
              "_FRE_content": "stringLiteral",
              "_FRE_optContent": 10,
              "_FRE_visibility": FreNodeReference {
                "$$owner": [Circular],
                "$$propertyIndex": undefined,
                "$$propertyName": "visibility",
                "_FRE_pathname": Array [
                  "+",
                ],
                "_FRE_referred": VisibilityKind {
                  "$$owner": null,
                  "$$propertyIndex": undefined,
                  "$$propertyName": "",
                  "$id": "ID-1",
                  "$typename": "VisibilityKind",
                  "_FRE_name": "+",
                },
                "typeName": "VisibilityKind",
              },
              "parseLocation": FreParseLocation {
                "column": 34,
                "line": 141,
              },
            },
            "_FRE_partList": Array [],
            "parseLocation": FreParseLocation {
              "column": 25,
              "line": 140,
            },
          },
        ],
        "_FRE_normalSub": WithDirectParts {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "normalSub",
          "$id": "ID-30",
          "$typename": "WithDirectParts",
          "_FRE_optList": Array [],
          "_FRE_optPart": null,
          "_FRE_part": PartConcept {
            "$$owner": [Circular],
            "$$propertyIndex": undefined,
            "$$propertyName": "part",
            "$id": "ID-29",
            "$typename": "PartConcept",
            "_FRE_content": "stringLiteral",
            "_FRE_optContent": 10,
            "_FRE_visibility": FreNodeReference {
              "$$owner": [Circular],
              "$$propertyIndex": undefined,
              "$$propertyName": "visibility",
              "_FRE_pathname": Array [
                "+",
              ],
              "_FRE_referred": VisibilityKind {
                "$$owner": null,
                "$$propertyIndex": undefined,
                "$$propertyName": "",
                "$id": "ID-1",
                "$typename": "VisibilityKind",
                "_FRE_name": "+",
              },
              "typeName": "VisibilityKind",
            },
            "parseLocation": FreParseLocation {
              "column": 30,
              "line": 124,
            },
          },
          "_FRE_partList": Array [],
          "parseLocation": FreParseLocation {
            "column": 31,
            "line": 123,
          },
        },
        "_FRE_optListSub": Array [
          WithDirectParts {
            "$$owner": [Circular],
            "$$propertyIndex": 0,
            "$$propertyName": "optListSub",
            "$id": "ID-36",
            "$typename": "WithDirectParts",
            "_FRE_optList": Array [],
            "_FRE_optPart": null,
            "_FRE_part": PartConcept {
              "$$owner": [Circular],
              "$$propertyIndex": undefined,
              "$$propertyName": "part",
              "$id": "ID-35",
              "$typename": "PartConcept",
              "_FRE_content": "stringLit",
              "_FRE_optContent": 1440,
              "_FRE_visibility": FreNodeReference {
                "$$owner": [Circular],
                "$$propertyIndex": undefined,
                "$$propertyName": "visibility",
                "_FRE_pathname": Array [
                  "+",
                ],
                "_FRE_referred": VisibilityKind {
                  "$$owner": null,
                  "$$propertyIndex": undefined,
                  "$$propertyName": "",
                  "$id": "ID-1",
                  "$typename": "VisibilityKind",
                  "_FRE_name": "+",
                },
                "typeName": "VisibilityKind",
              },
              "parseLocation": FreParseLocation {
                "column": 34,
                "line": 150,
              },
            },
            "_FRE_partList": Array [],
            "parseLocation": FreParseLocation {
              "column": 25,
              "line": 149,
            },
          },
        ],
        "_FRE_optionalSub": WithDirectParts {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "optionalSub",
          "$id": "ID-32",
          "$typename": "WithDirectParts",
          "_FRE_optList": Array [],
          "_FRE_optPart": null,
          "_FRE_part": PartConcept {
            "$$owner": [Circular],
            "$$propertyIndex": undefined,
            "$$propertyName": "part",
            "$id": "ID-31",
            "$typename": "PartConcept",
            "_FRE_content": "stringLiteral",
            "_FRE_optContent": 10,
            "_FRE_visibility": FreNodeReference {
              "$$owner": [Circular],
              "$$propertyIndex": undefined,
              "$$propertyName": "visibility",
              "_FRE_pathname": Array [
                "#",
              ],
              "_FRE_referred": VisibilityKind {
                "$$owner": null,
                "$$propertyIndex": undefined,
                "$$propertyName": "",
                "$id": "ID-3",
                "$typename": "VisibilityKind",
                "_FRE_name": "#",
              },
              "typeName": "VisibilityKind",
            },
            "parseLocation": FreParseLocation {
              "column": 30,
              "line": 132,
            },
          },
          "_FRE_partList": Array [],
          "parseLocation": FreParseLocation {
            "column": 33,
            "line": 131,
          },
        },
        "parseLocation": FreParseLocation {
          "column": 17,
          "line": 122,
        },
      },
    ],
    "parseLocation": FreParseLocation {
      "column": 9,
      "line": 23,
    },
  },
  "parseLocation": FreParseLocation {
    "column": 1,
    "line": 1,
  },
}
`;

exports[`Parser properties of type  Part with Optionals present 1`] = `
PartsTest {
  "$$owner": TestParserModel {
    "$$owner": null,
    "$$propertyIndex": undefined,
    "$$propertyName": "",
    "$id": "ID-1",
    "$typename": "TestParserModel",
    "_FRE_lim": null,
    "_FRE_parts": [Circular],
    "_FRE_prim": null,
    "_FRE_primWith": null,
    "_FRE_ref": null,
  },
  "$$propertyIndex": undefined,
  "$$propertyName": "parts",
  "$id": "ID-10",
  "$typename": "PartsTest",
  "_FRE_directParts": WithDirectParts {
    "$$owner": [Circular],
    "$$propertyIndex": undefined,
    "$$propertyName": "directParts",
    "$id": "ID-9",
    "$typename": "WithDirectParts",
    "_FRE_optList": Array [
      PartConcept {
        "$$owner": [Circular],
        "$$propertyIndex": 0,
        "$$propertyName": "optList",
        "$id": "ID-7",
        "$typename": "PartConcept",
        "_FRE_content": "stringLiteral",
        "_FRE_optContent": 10,
        "_FRE_visibility": FreNodeReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "visibility",
          "_FRE_pathname": Array [
            "+",
          ],
          "_FRE_referred": VisibilityKind {
            "$$owner": null,
            "$$propertyIndex": undefined,
            "$$propertyName": "",
            "$id": "ID-1",
            "$typename": "VisibilityKind",
            "_FRE_name": "+",
          },
          "typeName": "VisibilityKind",
        },
        "parseLocation": FreParseLocation {
          "column": 24,
          "line": 28,
        },
      },
      PartConcept {
        "$$owner": [Circular],
        "$$propertyIndex": 1,
        "$$propertyName": "optList",
        "$id": "ID-8",
        "$typename": "PartConcept",
        "_FRE_content": "stringLiteralYYY",
        "_FRE_optContent": 0,
        "_FRE_visibility": FreNodeReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "visibility",
          "_FRE_pathname": Array [
            "+",
          ],
          "_FRE_referred": VisibilityKind {
            "$$owner": null,
            "$$propertyIndex": undefined,
            "$$propertyName": "",
            "$id": "ID-1",
            "$typename": "VisibilityKind",
            "_FRE_name": "+",
          },
          "typeName": "VisibilityKind",
        },
        "parseLocation": FreParseLocation {
          "column": 25,
          "line": 32,
        },
      },
    ],
    "_FRE_optPart": PartConcept {
      "$$owner": [Circular],
      "$$propertyIndex": undefined,
      "$$propertyName": "optPart",
      "$id": "ID-3",
      "$typename": "PartConcept",
      "_FRE_content": "stringLiteral",
      "_FRE_optContent": 10,
      "_FRE_visibility": FreNodeReference {
        "$$owner": [Circular],
        "$$propertyIndex": undefined,
        "$$propertyName": "visibility",
        "_FRE_pathname": Array [
          "+",
        ],
        "_FRE_referred": VisibilityKind {
          "$$owner": null,
          "$$propertyIndex": undefined,
          "$$propertyName": "",
          "$id": "ID-1",
          "$typename": "VisibilityKind",
          "_FRE_name": "+",
        },
        "typeName": "VisibilityKind",
      },
      "parseLocation": FreParseLocation {
        "column": 24,
        "line": 9,
      },
    },
    "_FRE_part": PartConcept {
      "$$owner": [Circular],
      "$$propertyIndex": undefined,
      "$$propertyName": "part",
      "$id": "ID-2",
      "$typename": "PartConcept",
      "_FRE_content": "stringLiteral",
      "_FRE_optContent": 10,
      "_FRE_visibility": FreNodeReference {
        "$$owner": [Circular],
        "$$propertyIndex": undefined,
        "$$propertyName": "visibility",
        "_FRE_pathname": Array [
          "+",
        ],
        "_FRE_referred": VisibilityKind {
          "$$owner": null,
          "$$propertyIndex": undefined,
          "$$propertyName": "",
          "$id": "ID-1",
          "$typename": "VisibilityKind",
          "_FRE_name": "+",
        },
        "typeName": "VisibilityKind",
      },
      "parseLocation": FreParseLocation {
        "column": 25,
        "line": 3,
      },
    },
    "_FRE_partList": Array [
      PartConcept {
        "$$owner": [Circular],
        "$$propertyIndex": 0,
        "$$propertyName": "partList",
        "$id": "ID-4",
        "$typename": "PartConcept",
        "_FRE_content": "otherString",
        "_FRE_optContent": 0,
        "_FRE_visibility": FreNodeReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "visibility",
          "_FRE_pathname": Array [
            "#",
          ],
          "_FRE_referred": VisibilityKind {
            "$$owner": null,
            "$$propertyIndex": undefined,
            "$$propertyName": "",
            "$id": "ID-3",
            "$typename": "VisibilityKind",
            "_FRE_name": "#",
          },
          "typeName": "VisibilityKind",
        },
        "parseLocation": FreParseLocation {
          "column": 25,
          "line": 15,
        },
      },
      PartConcept {
        "$$owner": [Circular],
        "$$propertyIndex": 1,
        "$$propertyName": "partList",
        "$id": "ID-5",
        "$typename": "PartConcept",
        "_FRE_content": "stringLiteralXXX",
        "_FRE_optContent": 123,
        "_FRE_visibility": FreNodeReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "visibility",
          "_FRE_pathname": Array [
            "-",
          ],
          "_FRE_referred": VisibilityKind {
            "$$owner": null,
            "$$propertyIndex": undefined,
            "$$propertyName": "",
            "$id": "ID-2",
            "$typename": "VisibilityKind",
            "_FRE_name": "-",
          },
          "typeName": "VisibilityKind",
        },
        "parseLocation": FreParseLocation {
          "column": 25,
          "line": 19,
        },
      },
      PartConcept {
        "$$owner": [Circular],
        "$$propertyIndex": 2,
        "$$propertyName": "partList",
        "$id": "ID-6",
        "$typename": "PartConcept",
        "_FRE_content": "stringLiteralYYY",
        "_FRE_optContent": 0,
        "_FRE_visibility": FreNodeReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "visibility",
          "_FRE_pathname": Array [
            "+",
          ],
          "_FRE_referred": VisibilityKind {
            "$$owner": null,
            "$$propertyIndex": undefined,
            "$$propertyName": "",
            "$id": "ID-1",
            "$typename": "VisibilityKind",
            "_FRE_name": "+",
          },
          "typeName": "VisibilityKind",
        },
        "parseLocation": FreParseLocation {
          "column": 25,
          "line": 23,
        },
      },
    ],
    "parseLocation": FreParseLocation {
      "column": 14,
      "line": 2,
    },
  },
  "_FRE_name": "myName",
  "_FRE_partsOfParts": null,
  "parseLocation": FreParseLocation {
    "column": 1,
    "line": 1,
  },
}
`;

exports[`Parser properties of type  Primitive  1`] = `
PrimitivesTest {
  "$$owner": TestParserModel {
    "$$owner": null,
    "$$propertyIndex": undefined,
    "$$propertyName": "",
    "$id": "ID-1",
    "$typename": "TestParserModel",
    "_FRE_lim": null,
    "_FRE_parts": null,
    "_FRE_prim": [Circular],
    "_FRE_primWith": null,
    "_FRE_ref": null,
  },
  "$$propertyIndex": undefined,
  "$$propertyName": "prim",
  "$id": "ID-8",
  "$typename": "PrimitivesTest",
  "_FRE_name": "someName",
  "_FRE_prim": Prim {
    "$$owner": [Circular],
    "$$propertyIndex": undefined,
    "$$propertyName": "prim",
    "$id": "ID-2",
    "$typename": "Prim",
    "_FRE_primBoolean": true,
    "_FRE_primIdentifier": "EenNaam",
    "_FRE_primListBoolean": Array [
      true,
      false,
      true,
      false,
    ],
    "_FRE_primListIdentifier": Array [
      "EenNaam",
      "NogEenNaam",
      "EnNogEen",
    ],
    "_FRE_primListNumber": Array [
      10,
      20,
    ],
    "_FRE_primListString": Array [
      "TEKST",
      "TEKST",
    ],
    "_FRE_primNumber": 19,
    "_FRE_primString": "TEKST",
    "parseLocation": FreParseLocation {
      "column": 5,
      "line": 3,
    },
  },
  "_FRE_primExtra": PrimsWithExtraText {
    "$$owner": [Circular],
    "$$propertyIndex": undefined,
    "$$propertyName": "primExtra",
    "$id": "ID-3",
    "$typename": "PrimsWithExtraText",
    "_FRE_primBooleanWithExtra": false,
    "_FRE_primIdentifierWithExtra": "EenNaam",
    "_FRE_primListBooleanWithExtra": Array [
      false,
      true,
      false,
    ],
    "_FRE_primListIdentifierWithExtra": Array [
      "EenNaam",
      "NogEenNaam",
      "EnNogEen",
    ],
    "_FRE_primListNumberWithExtra": Array [
      67,
      98,
    ],
    "_FRE_primListStringWithExtra": Array [
      "TEKST",
      "TEXT",
    ],
    "_FRE_primNumberWithExtra": 45,
    "_FRE_primStringWithExtra": "TEKST",
    "parseLocation": FreParseLocation {
      "column": 5,
      "line": 14,
    },
  },
  "_FRE_separator": PrimsWithSeparator {
    "$$owner": [Circular],
    "$$propertyIndex": undefined,
    "$$propertyName": "separator",
    "$id": "ID-4",
    "$typename": "PrimsWithSeparator",
    "_FRE_primListBooleanSeparator": Array [
      true,
      false,
    ],
    "_FRE_primListIdentifierSeparator": Array [
      "EenNaam",
      "NogEenNaam",
      "EnNogEen",
    ],
    "_FRE_primListNumberSeparator": Array [
      56,
      67,
      78,
    ],
    "_FRE_primListStringSeparator": Array [
      "iets",
      "wat",
    ],
    "parseLocation": FreParseLocation {
      "column": 11,
      "line": 22,
    },
  },
  "_FRE_separatorOpt": PrimsWithSeparator {
    "$$owner": [Circular],
    "$$propertyIndex": undefined,
    "$$propertyName": "separatorOpt",
    "$id": "ID-6",
    "$typename": "PrimsWithSeparator",
    "_FRE_primListBooleanSeparator": Array [
      true,
      false,
    ],
    "_FRE_primListIdentifierSeparator": Array [],
    "_FRE_primListNumberSeparator": Array [
      56,
      67,
      78,
    ],
    "_FRE_primListStringSeparator": Array [],
    "parseLocation": FreParseLocation {
      "column": 14,
      "line": 32,
    },
  },
  "_FRE_terminator": PrimsWithTerminator {
    "$$owner": [Circular],
    "$$propertyIndex": undefined,
    "$$propertyName": "terminator",
    "$id": "ID-5",
    "$typename": "PrimsWithTerminator",
    "_FRE_primListBooleanTerminator": Array [
      true,
    ],
    "_FRE_primListIdentifierTerminator": Array [
      "EenNaam",
    ],
    "_FRE_primListNumberTerminator": Array [
      30,
    ],
    "_FRE_primListStringTerminator": Array [
      "iets",
    ],
    "parseLocation": FreParseLocation {
      "column": 12,
      "line": 27,
    },
  },
  "_FRE_terminatorOpt": PrimsWithTerminator {
    "$$owner": [Circular],
    "$$propertyIndex": undefined,
    "$$propertyName": "terminatorOpt",
    "$id": "ID-7",
    "$typename": "PrimsWithTerminator",
    "_FRE_primListBooleanTerminator": Array [],
    "_FRE_primListIdentifierTerminator": Array [
      "EenNaam",
    ],
    "_FRE_primListNumberTerminator": Array [],
    "_FRE_primListStringTerminator": Array [
      "iets",
    ],
    "parseLocation": FreParseLocation {
      "column": 15,
      "line": 37,
    },
  },
  "parseLocation": FreParseLocation {
    "column": 1,
    "line": 1,
  },
}
`;

exports[`Parser properties of type  Primitive with Keyword projection  1`] = `
PrimsWithKeywordTest {
  "$$owner": TestParserModel {
    "$$owner": null,
    "$$propertyIndex": undefined,
    "$$propertyName": "",
    "$id": "ID-1",
    "$typename": "TestParserModel",
    "_FRE_lim": null,
    "_FRE_parts": null,
    "_FRE_prim": null,
    "_FRE_primWith": [Circular],
    "_FRE_ref": null,
  },
  "$$propertyIndex": undefined,
  "$$propertyName": "primWith",
  "$id": "ID-10",
  "$typename": "PrimsWithKeywordTest",
  "_FRE_name": "myName",
  "_FRE_primWith": Array [
    PrimKeyword {
      "$$owner": [Circular],
      "$$propertyIndex": 0,
      "$$propertyName": "primWith",
      "$id": "ID-2",
      "$typename": "PrimKeyword",
      "_FRE_primBoolean": true,
      "parseLocation": FreParseLocation {
        "column": 6,
        "line": 3,
      },
    },
    PrimKeyword {
      "$$owner": [Circular],
      "$$propertyIndex": 1,
      "$$propertyName": "primWith",
      "$id": "ID-3",
      "$typename": "PrimKeyword",
      "_FRE_primBoolean": false,
      "parseLocation": FreParseLocation {
        "column": 9,
        "line": 4,
      },
    },
    PrimKeyword {
      "$$owner": [Circular],
      "$$propertyIndex": 2,
      "$$propertyName": "primWith",
      "$id": "ID-4",
      "$typename": "PrimKeyword",
      "_FRE_primBoolean": true,
      "parseLocation": FreParseLocation {
        "column": 6,
        "line": 5,
      },
    },
    PrimKeyword {
      "$$owner": [Circular],
      "$$propertyIndex": 3,
      "$$propertyName": "primWith",
      "$id": "ID-5",
      "$typename": "PrimKeyword",
      "_FRE_primBoolean": false,
      "parseLocation": FreParseLocation {
        "column": 9,
        "line": 6,
      },
    },
    PrimKeyword {
      "$$owner": [Circular],
      "$$propertyIndex": 4,
      "$$propertyName": "primWith",
      "$id": "ID-6",
      "$typename": "PrimKeyword",
      "_FRE_primBoolean": true,
      "parseLocation": FreParseLocation {
        "column": 6,
        "line": 7,
      },
    },
    PrimKeyword {
      "$$owner": [Circular],
      "$$propertyIndex": 5,
      "$$propertyName": "primWith",
      "$id": "ID-7",
      "$typename": "PrimKeyword",
      "_FRE_primBoolean": false,
      "parseLocation": FreParseLocation {
        "column": 9,
        "line": 8,
      },
    },
    PrimKeyword {
      "$$owner": [Circular],
      "$$propertyIndex": 6,
      "$$propertyName": "primWith",
      "$id": "ID-8",
      "$typename": "PrimKeyword",
      "_FRE_primBoolean": false,
      "parseLocation": FreParseLocation {
        "column": 6,
        "line": 9,
      },
    },
    PrimKeyword {
      "$$owner": [Circular],
      "$$propertyIndex": 7,
      "$$propertyName": "primWith",
      "$id": "ID-9",
      "$typename": "PrimKeyword",
      "_FRE_primBoolean": true,
      "parseLocation": FreParseLocation {
        "column": 9,
        "line": 10,
      },
    },
  ],
  "parseLocation": FreParseLocation {
    "column": 1,
    "line": 1,
  },
}
`;

exports[`Parser properties of type  Ref  1`] = `
RefsTest {
  "$$owner": TestParserModel {
    "$$owner": null,
    "$$propertyIndex": undefined,
    "$$propertyName": "",
    "$id": "ID-1",
    "$typename": "TestParserModel",
    "_FRE_lim": null,
    "_FRE_parts": null,
    "_FRE_prim": null,
    "_FRE_primWith": null,
    "_FRE_ref": [Circular],
  },
  "$$propertyIndex": undefined,
  "$$propertyName": "ref",
  "$id": "ID-9",
  "$typename": "RefsTest",
  "_FRE_directRefs": WithDirectRefs {
    "$$owner": [Circular],
    "$$propertyIndex": undefined,
    "$$propertyName": "directRefs",
    "$id": "ID-2",
    "$typename": "WithDirectRefs",
    "_FRE_optRefList": Array [],
    "_FRE_ref": FreNodeReference {
      "$$owner": [Circular],
      "$$propertyIndex": undefined,
      "$$propertyName": "ref",
      "_FRE_pathname": Array [
        "someName",
        "otherName",
        "xxx",
        "yyy",
      ],
      "_FRE_referred": null,
      "typeName": "RefConcept",
    },
    "_FRE_refList": Array [
      FreNodeReference {
        "$$owner": [Circular],
        "$$propertyIndex": 0,
        "$$propertyName": "refList",
        "_FRE_pathname": Array [
          "name1.ff.gg.yuio",
        ],
        "_FRE_referred": null,
        "typeName": "RefConcept",
      },
      FreNodeReference {
        "$$owner": [Circular],
        "$$propertyIndex": 1,
        "$$propertyName": "refList",
        "_FRE_pathname": Array [
          "name2",
        ],
        "_FRE_referred": null,
        "typeName": "RefConcept",
      },
      FreNodeReference {
        "$$owner": [Circular],
        "$$propertyIndex": 2,
        "$$propertyName": "refList",
        "_FRE_pathname": Array [
          "name3",
        ],
        "_FRE_referred": null,
        "typeName": "RefConcept",
      },
      FreNodeReference {
        "$$owner": [Circular],
        "$$propertyIndex": 3,
        "$$propertyName": "refList",
        "_FRE_pathname": Array [
          "name4",
        ],
        "_FRE_referred": null,
        "typeName": "RefConcept",
      },
    ],
    "parseLocation": FreParseLocation {
      "column": 13,
      "line": 2,
    },
  },
  "_FRE_indirectRefs": null,
  "_FRE_name": "myName",
  "_FRE_withSeparator": RefsWithSeparator {
    "$$owner": [Circular],
    "$$propertyIndex": undefined,
    "$$propertyName": "withSeparator",
    "$id": "ID-8",
    "$typename": "RefsWithSeparator",
    "_FRE_optList": Array [
      WithDirectRefs {
        "$$owner": [Circular],
        "$$propertyIndex": 0,
        "$$propertyName": "optList",
        "$id": "ID-5",
        "$typename": "WithDirectRefs",
        "_FRE_optRefList": Array [],
        "_FRE_ref": FreNodeReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "ref",
          "_FRE_pathname": Array [
            "someName",
            "otherName",
            "xxx",
            "yyy",
          ],
          "_FRE_referred": null,
          "typeName": "RefConcept",
        },
        "_FRE_refList": Array [
          FreNodeReference {
            "$$owner": [Circular],
            "$$propertyIndex": 0,
            "$$propertyName": "refList",
            "_FRE_pathname": Array [
              "name1.ff.gg.yuio",
            ],
            "_FRE_referred": null,
            "typeName": "RefConcept",
          },
          FreNodeReference {
            "$$owner": [Circular],
            "$$propertyIndex": 1,
            "$$propertyName": "refList",
            "_FRE_pathname": Array [
              "name2",
            ],
            "_FRE_referred": null,
            "typeName": "RefConcept",
          },
        ],
        "parseLocation": FreParseLocation {
          "column": 21,
          "line": 31,
        },
      },
      WithDirectRefs {
        "$$owner": [Circular],
        "$$propertyIndex": 1,
        "$$propertyName": "optList",
        "$id": "ID-6",
        "$typename": "WithDirectRefs",
        "_FRE_optRefList": Array [],
        "_FRE_ref": FreNodeReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "ref",
          "_FRE_pathname": Array [
            "someName",
            "otherName",
            "xxx",
            "yyy",
          ],
          "_FRE_referred": null,
          "typeName": "RefConcept",
        },
        "_FRE_refList": Array [
          FreNodeReference {
            "$$owner": [Circular],
            "$$propertyIndex": 0,
            "$$propertyName": "refList",
            "_FRE_pathname": Array [
              "name1.ff.gg.yuio",
            ],
            "_FRE_referred": null,
            "typeName": "RefConcept",
          },
          FreNodeReference {
            "$$owner": [Circular],
            "$$propertyIndex": 1,
            "$$propertyName": "refList",
            "_FRE_pathname": Array [
              "name2",
            ],
            "_FRE_referred": null,
            "typeName": "RefConcept",
          },
        ],
        "parseLocation": FreParseLocation {
          "column": 21,
          "line": 39,
        },
      },
      WithDirectRefs {
        "$$owner": [Circular],
        "$$propertyIndex": 2,
        "$$propertyName": "optList",
        "$id": "ID-7",
        "$typename": "WithDirectRefs",
        "_FRE_optRefList": Array [],
        "_FRE_ref": FreNodeReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "ref",
          "_FRE_pathname": Array [
            "someName",
            "otherName",
            "xxx",
            "yyy",
          ],
          "_FRE_referred": null,
          "typeName": "RefConcept",
        },
        "_FRE_refList": Array [
          FreNodeReference {
            "$$owner": [Circular],
            "$$propertyIndex": 0,
            "$$propertyName": "refList",
            "_FRE_pathname": Array [
              "name1.ff.gg.yuio",
            ],
            "_FRE_referred": null,
            "typeName": "RefConcept",
          },
          FreNodeReference {
            "$$owner": [Circular],
            "$$propertyIndex": 1,
            "$$propertyName": "refList",
            "_FRE_pathname": Array [
              "name2",
            ],
            "_FRE_referred": null,
            "typeName": "RefConcept",
          },
        ],
        "parseLocation": FreParseLocation {
          "column": 21,
          "line": 47,
        },
      },
    ],
    "_FRE_partList": Array [
      WithDirectRefs {
        "$$owner": [Circular],
        "$$propertyIndex": 0,
        "$$propertyName": "partList",
        "$id": "ID-3",
        "$typename": "WithDirectRefs",
        "_FRE_optRefList": Array [],
        "_FRE_ref": FreNodeReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "ref",
          "_FRE_pathname": Array [
            "someName",
            "otherName",
            "xxx",
            "yyy",
          ],
          "_FRE_referred": null,
          "typeName": "RefConcept",
        },
        "_FRE_refList": Array [
          FreNodeReference {
            "$$owner": [Circular],
            "$$propertyIndex": 0,
            "$$propertyName": "refList",
            "_FRE_pathname": Array [
              "name1.ff.gg.yuio",
            ],
            "_FRE_referred": null,
            "typeName": "RefConcept",
          },
          FreNodeReference {
            "$$owner": [Circular],
            "$$propertyIndex": 1,
            "$$propertyName": "refList",
            "_FRE_pathname": Array [
              "name2",
            ],
            "_FRE_referred": null,
            "typeName": "RefConcept",
          },
          FreNodeReference {
            "$$owner": [Circular],
            "$$propertyIndex": 2,
            "$$propertyName": "refList",
            "_FRE_pathname": Array [
              "name3",
            ],
            "_FRE_referred": null,
            "typeName": "RefConcept",
          },
          FreNodeReference {
            "$$owner": [Circular],
            "$$propertyIndex": 3,
            "$$propertyName": "refList",
            "_FRE_pathname": Array [
              "name4",
            ],
            "_FRE_referred": null,
            "typeName": "RefConcept",
          },
        ],
        "parseLocation": FreParseLocation {
          "column": 19,
          "line": 13,
        },
      },
      WithDirectRefs {
        "$$owner": [Circular],
        "$$propertyIndex": 1,
        "$$propertyName": "partList",
        "$id": "ID-4",
        "$typename": "WithDirectRefs",
        "_FRE_optRefList": Array [],
        "_FRE_ref": FreNodeReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "ref",
          "_FRE_pathname": Array [
            "someName",
            "otherName",
            "xxx",
            "yyy",
          ],
          "_FRE_referred": null,
          "typeName": "RefConcept",
        },
        "_FRE_refList": Array [
          FreNodeReference {
            "$$owner": [Circular],
            "$$propertyIndex": 0,
            "$$propertyName": "refList",
            "_FRE_pathname": Array [
              "name1.ff.gg.yuio",
            ],
            "_FRE_referred": null,
            "typeName": "RefConcept",
          },
          FreNodeReference {
            "$$owner": [Circular],
            "$$propertyIndex": 1,
            "$$propertyName": "refList",
            "_FRE_pathname": Array [
              "name2",
            ],
            "_FRE_referred": null,
            "typeName": "RefConcept",
          },
        ],
        "parseLocation": FreParseLocation {
          "column": 21,
          "line": 23,
        },
      },
    ],
    "parseLocation": FreParseLocation {
      "column": 19,
      "line": 13,
    },
  },
  "parseLocation": FreParseLocation {
    "column": 1,
    "line": 1,
  },
}
`;

exports[`Parser properties of type  Ref with Optionals present 1`] = `
RefsTest {
  "$$owner": TestParserModel {
    "$$owner": null,
    "$$propertyIndex": undefined,
    "$$propertyName": "",
    "$id": "ID-1",
    "$typename": "TestParserModel",
    "_FRE_lim": null,
    "_FRE_parts": null,
    "_FRE_prim": null,
    "_FRE_primWith": null,
    "_FRE_ref": [Circular],
  },
  "$$propertyIndex": undefined,
  "$$propertyName": "ref",
  "$id": "ID-12",
  "$typename": "RefsTest",
  "_FRE_directRefs": WithDirectRefs {
    "$$owner": [Circular],
    "$$propertyIndex": undefined,
    "$$propertyName": "directRefs",
    "$id": "ID-2",
    "$typename": "WithDirectRefs",
    "_FRE_optRef": FreNodeReference {
      "$$owner": [Circular],
      "$$propertyIndex": undefined,
      "$$propertyName": "optRef",
      "_FRE_pathname": Array [
        "nameA",
      ],
      "_FRE_referred": null,
      "typeName": "RefConcept",
    },
    "_FRE_optRefList": Array [
      FreNodeReference {
        "$$owner": [Circular],
        "$$propertyIndex": 0,
        "$$propertyName": "optRefList",
        "_FRE_pathname": Array [
          "nameZ",
        ],
        "_FRE_referred": null,
        "typeName": "RefConcept",
      },
      FreNodeReference {
        "$$owner": [Circular],
        "$$propertyIndex": 1,
        "$$propertyName": "optRefList",
        "_FRE_pathname": Array [
          "nameY.sdfsgargh.HERA",
        ],
        "_FRE_referred": null,
        "typeName": "RefConcept",
      },
      FreNodeReference {
        "$$owner": [Circular],
        "$$propertyIndex": 2,
        "$$propertyName": "optRefList",
        "_FRE_pathname": Array [
          "nameX",
        ],
        "_FRE_referred": null,
        "typeName": "RefConcept",
      },
    ],
    "_FRE_ref": FreNodeReference {
      "$$owner": [Circular],
      "$$propertyIndex": undefined,
      "$$propertyName": "ref",
      "_FRE_pathname": Array [
        "someName",
        "x34565",
      ],
      "_FRE_referred": null,
      "typeName": "RefConcept",
    },
    "_FRE_refList": Array [
      FreNodeReference {
        "$$owner": [Circular],
        "$$propertyIndex": 0,
        "$$propertyName": "refList",
        "_FRE_pathname": Array [
          "name1.d45fgh",
        ],
        "_FRE_referred": null,
        "typeName": "RefConcept",
      },
      FreNodeReference {
        "$$owner": [Circular],
        "$$propertyIndex": 1,
        "$$propertyName": "refList",
        "_FRE_pathname": Array [
          "name2",
        ],
        "_FRE_referred": null,
        "typeName": "RefConcept",
      },
      FreNodeReference {
        "$$owner": [Circular],
        "$$propertyIndex": 2,
        "$$propertyName": "refList",
        "_FRE_pathname": Array [
          "name3",
        ],
        "_FRE_referred": null,
        "typeName": "RefConcept",
      },
      FreNodeReference {
        "$$owner": [Circular],
        "$$propertyIndex": 3,
        "$$propertyName": "refList",
        "_FRE_pathname": Array [
          "name4",
        ],
        "_FRE_referred": null,
        "typeName": "RefConcept",
      },
    ],
    "parseLocation": FreParseLocation {
      "column": 13,
      "line": 2,
    },
  },
  "_FRE_indirectRefs": WithSubSubRefs {
    "$$owner": [Circular],
    "$$propertyIndex": undefined,
    "$$propertyName": "indirectRefs",
    "$id": "ID-8",
    "$typename": "WithSubSubRefs",
    "_FRE_optList": Array [
      WithDirectRefs {
        "$$owner": [Circular],
        "$$propertyIndex": 0,
        "$$propertyName": "optList",
        "$id": "ID-7",
        "$typename": "WithDirectRefs",
        "_FRE_optRef": FreNodeReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "optRef",
          "_FRE_pathname": Array [
            "nameA",
          ],
          "_FRE_referred": null,
          "typeName": "RefConcept",
        },
        "_FRE_optRefList": Array [
          FreNodeReference {
            "$$owner": [Circular],
            "$$propertyIndex": 0,
            "$$propertyName": "optRefList",
            "_FRE_pathname": Array [
              "nameZ",
            ],
            "_FRE_referred": null,
            "typeName": "RefConcept",
          },
          FreNodeReference {
            "$$owner": [Circular],
            "$$propertyIndex": 1,
            "$$propertyName": "optRefList",
            "_FRE_pathname": Array [
              "nameY",
            ],
            "_FRE_referred": null,
            "typeName": "RefConcept",
          },
          FreNodeReference {
            "$$owner": [Circular],
            "$$propertyIndex": 2,
            "$$propertyName": "optRefList",
            "_FRE_pathname": Array [
              "nameX",
            ],
            "_FRE_referred": null,
            "typeName": "RefConcept",
          },
        ],
        "_FRE_ref": FreNodeReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "ref",
          "_FRE_pathname": Array [
            "someName",
          ],
          "_FRE_referred": null,
          "typeName": "RefConcept",
        },
        "_FRE_refList": Array [
          FreNodeReference {
            "$$owner": [Circular],
            "$$propertyIndex": 0,
            "$$propertyName": "refList",
            "_FRE_pathname": Array [
              "name1",
            ],
            "_FRE_referred": null,
            "typeName": "RefConcept",
          },
          FreNodeReference {
            "$$owner": [Circular],
            "$$propertyIndex": 1,
            "$$propertyName": "refList",
            "_FRE_pathname": Array [
              "name2",
            ],
            "_FRE_referred": null,
            "typeName": "RefConcept",
          },
          FreNodeReference {
            "$$owner": [Circular],
            "$$propertyIndex": 2,
            "$$propertyName": "refList",
            "_FRE_pathname": Array [
              "name3",
            ],
            "_FRE_referred": null,
            "typeName": "RefConcept",
          },
          FreNodeReference {
            "$$owner": [Circular],
            "$$propertyIndex": 3,
            "$$propertyName": "refList",
            "_FRE_pathname": Array [
              "name4",
            ],
            "_FRE_referred": null,
            "typeName": "RefConcept",
          },
        ],
        "parseLocation": FreParseLocation {
          "column": 25,
          "line": 66,
        },
      },
    ],
    "_FRE_optPart": WithDirectRefs {
      "$$owner": [Circular],
      "$$propertyIndex": undefined,
      "$$propertyName": "optPart",
      "$id": "ID-4",
      "$typename": "WithDirectRefs",
      "_FRE_optRef": FreNodeReference {
        "$$owner": [Circular],
        "$$propertyIndex": undefined,
        "$$propertyName": "optRef",
        "_FRE_pathname": Array [
          "nameA",
        ],
        "_FRE_referred": null,
        "typeName": "RefConcept",
      },
      "_FRE_optRefList": Array [
        FreNodeReference {
          "$$owner": [Circular],
          "$$propertyIndex": 0,
          "$$propertyName": "optRefList",
          "_FRE_pathname": Array [
            "nameZ",
          ],
          "_FRE_referred": null,
          "typeName": "RefConcept",
        },
        FreNodeReference {
          "$$owner": [Circular],
          "$$propertyIndex": 1,
          "$$propertyName": "optRefList",
          "_FRE_pathname": Array [
            "nameY",
          ],
          "_FRE_referred": null,
          "typeName": "RefConcept",
        },
        FreNodeReference {
          "$$owner": [Circular],
          "$$propertyIndex": 2,
          "$$propertyName": "optRefList",
          "_FRE_pathname": Array [
            "nameX",
          ],
          "_FRE_referred": null,
          "typeName": "RefConcept",
        },
      ],
      "_FRE_ref": FreNodeReference {
        "$$owner": [Circular],
        "$$propertyIndex": undefined,
        "$$propertyName": "ref",
        "_FRE_pathname": Array [
          "someName",
        ],
        "_FRE_referred": null,
        "typeName": "RefConcept",
      },
      "_FRE_refList": Array [
        FreNodeReference {
          "$$owner": [Circular],
          "$$propertyIndex": 0,
          "$$propertyName": "refList",
          "_FRE_pathname": Array [
            "name1",
          ],
          "_FRE_referred": null,
          "typeName": "RefConcept",
        },
        FreNodeReference {
          "$$owner": [Circular],
          "$$propertyIndex": 1,
          "$$propertyName": "refList",
          "_FRE_pathname": Array [
            "name2",
          ],
          "_FRE_referred": null,
          "typeName": "RefConcept",
        },
        FreNodeReference {
          "$$owner": [Circular],
          "$$propertyIndex": 2,
          "$$propertyName": "refList",
          "_FRE_pathname": Array [
            "name3",
          ],
          "_FRE_referred": null,
          "typeName": "RefConcept",
        },
        FreNodeReference {
          "$$owner": [Circular],
          "$$propertyIndex": 3,
          "$$propertyName": "refList",
          "_FRE_pathname": Array [
            "name4",
          ],
          "_FRE_referred": null,
          "typeName": "RefConcept",
        },
      ],
      "parseLocation": FreParseLocation {
        "column": 27,
        "line": 28,
      },
    },
    "_FRE_part": WithDirectRefs {
      "$$owner": [Circular],
      "$$propertyIndex": undefined,
      "$$propertyName": "part",
      "$id": "ID-3",
      "$typename": "WithDirectRefs",
      "_FRE_optRef": FreNodeReference {
        "$$owner": [Circular],
        "$$propertyIndex": undefined,
        "$$propertyName": "optRef",
        "_FRE_pathname": Array [
          "nameA",
        ],
        "_FRE_referred": null,
        "typeName": "RefConcept",
      },
      "_FRE_optRefList": Array [
        FreNodeReference {
          "$$owner": [Circular],
          "$$propertyIndex": 0,
          "$$propertyName": "optRefList",
          "_FRE_pathname": Array [
            "nameZ",
          ],
          "_FRE_referred": null,
          "typeName": "RefConcept",
        },
        FreNodeReference {
          "$$owner": [Circular],
          "$$propertyIndex": 1,
          "$$propertyName": "optRefList",
          "_FRE_pathname": Array [
            "nameY.h56",
          ],
          "_FRE_referred": null,
          "typeName": "RefConcept",
        },
        FreNodeReference {
          "$$owner": [Circular],
          "$$propertyIndex": 2,
          "$$propertyName": "optRefList",
          "_FRE_pathname": Array [
            "nameX",
          ],
          "_FRE_referred": null,
          "typeName": "RefConcept",
        },
      ],
      "_FRE_ref": FreNodeReference {
        "$$owner": [Circular],
        "$$propertyIndex": undefined,
        "$$propertyName": "ref",
        "_FRE_pathname": Array [
          "someName",
        ],
        "_FRE_referred": null,
        "typeName": "RefConcept",
      },
      "_FRE_refList": Array [
        FreNodeReference {
          "$$owner": [Circular],
          "$$propertyIndex": 0,
          "$$propertyName": "refList",
          "_FRE_pathname": Array [
            "name1.WREQWR.gag",
          ],
          "_FRE_referred": null,
          "typeName": "RefConcept",
        },
        FreNodeReference {
          "$$owner": [Circular],
          "$$propertyIndex": 1,
          "$$propertyName": "refList",
          "_FRE_pathname": Array [
            "name2",
          ],
          "_FRE_referred": null,
          "typeName": "RefConcept",
        },
        FreNodeReference {
          "$$owner": [Circular],
          "$$propertyIndex": 2,
          "$$propertyName": "refList",
          "_FRE_pathname": Array [
            "name3.fghy",
          ],
          "_FRE_referred": null,
          "typeName": "RefConcept",
        },
        FreNodeReference {
          "$$owner": [Circular],
          "$$propertyIndex": 3,
          "$$propertyName": "refList",
          "_FRE_pathname": Array [
            "name4",
          ],
          "_FRE_referred": null,
          "typeName": "RefConcept",
        },
      ],
      "parseLocation": FreParseLocation {
        "column": 24,
        "line": 15,
      },
    },
    "_FRE_partList": Array [
      WithDirectRefs {
        "$$owner": [Circular],
        "$$propertyIndex": 0,
        "$$propertyName": "partList",
        "$id": "ID-5",
        "$typename": "WithDirectRefs",
        "_FRE_optRef": FreNodeReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "optRef",
          "_FRE_pathname": Array [
            "nameA",
          ],
          "_FRE_referred": null,
          "typeName": "RefConcept",
        },
        "_FRE_optRefList": Array [
          FreNodeReference {
            "$$owner": [Circular],
            "$$propertyIndex": 0,
            "$$propertyName": "optRefList",
            "_FRE_pathname": Array [
              "nameZ",
            ],
            "_FRE_referred": null,
            "typeName": "RefConcept",
          },
          FreNodeReference {
            "$$owner": [Circular],
            "$$propertyIndex": 1,
            "$$propertyName": "optRefList",
            "_FRE_pathname": Array [
              "nameY",
            ],
            "_FRE_referred": null,
            "typeName": "RefConcept",
          },
          FreNodeReference {
            "$$owner": [Circular],
            "$$propertyIndex": 2,
            "$$propertyName": "optRefList",
            "_FRE_pathname": Array [
              "nameX",
            ],
            "_FRE_referred": null,
            "typeName": "RefConcept",
          },
        ],
        "_FRE_ref": FreNodeReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "ref",
          "_FRE_pathname": Array [
            "someName",
          ],
          "_FRE_referred": null,
          "typeName": "RefConcept",
        },
        "_FRE_refList": Array [
          FreNodeReference {
            "$$owner": [Circular],
            "$$propertyIndex": 0,
            "$$propertyName": "refList",
            "_FRE_pathname": Array [
              "name1",
            ],
            "_FRE_referred": null,
            "typeName": "RefConcept",
          },
          FreNodeReference {
            "$$owner": [Circular],
            "$$propertyIndex": 1,
            "$$propertyName": "refList",
            "_FRE_pathname": Array [
              "name2",
            ],
            "_FRE_referred": null,
            "typeName": "RefConcept",
          },
          FreNodeReference {
            "$$owner": [Circular],
            "$$propertyIndex": 2,
            "$$propertyName": "refList",
            "_FRE_pathname": Array [
              "name3",
            ],
            "_FRE_referred": null,
            "typeName": "RefConcept",
          },
          FreNodeReference {
            "$$owner": [Circular],
            "$$propertyIndex": 3,
            "$$propertyName": "refList",
            "_FRE_pathname": Array [
              "name4",
            ],
            "_FRE_referred": null,
            "typeName": "RefConcept",
          },
        ],
        "parseLocation": FreParseLocation {
          "column": 25,
          "line": 41,
        },
      },
      WithDirectRefs {
        "$$owner": [Circular],
        "$$propertyIndex": 1,
        "$$propertyName": "partList",
        "$id": "ID-6",
        "$typename": "WithDirectRefs",
        "_FRE_optRef": FreNodeReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "optRef",
          "_FRE_pathname": Array [
            "nameA",
          ],
          "_FRE_referred": null,
          "typeName": "RefConcept",
        },
        "_FRE_optRefList": Array [
          FreNodeReference {
            "$$owner": [Circular],
            "$$propertyIndex": 0,
            "$$propertyName": "optRefList",
            "_FRE_pathname": Array [
              "nameZ",
            ],
            "_FRE_referred": null,
            "typeName": "RefConcept",
          },
          FreNodeReference {
            "$$owner": [Circular],
            "$$propertyIndex": 1,
            "$$propertyName": "optRefList",
            "_FRE_pathname": Array [
              "nameY",
            ],
            "_FRE_referred": null,
            "typeName": "RefConcept",
          },
          FreNodeReference {
            "$$owner": [Circular],
            "$$propertyIndex": 2,
            "$$propertyName": "optRefList",
            "_FRE_pathname": Array [
              "nameX",
            ],
            "_FRE_referred": null,
            "typeName": "RefConcept",
          },
        ],
        "_FRE_ref": FreNodeReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "ref",
          "_FRE_pathname": Array [
            "someName",
          ],
          "_FRE_referred": null,
          "typeName": "RefConcept",
        },
        "_FRE_refList": Array [
          FreNodeReference {
            "$$owner": [Circular],
            "$$propertyIndex": 0,
            "$$propertyName": "refList",
            "_FRE_pathname": Array [
              "name1",
            ],
            "_FRE_referred": null,
            "typeName": "RefConcept",
          },
          FreNodeReference {
            "$$owner": [Circular],
            "$$propertyIndex": 1,
            "$$propertyName": "refList",
            "_FRE_pathname": Array [
              "name2",
            ],
            "_FRE_referred": null,
            "typeName": "RefConcept",
          },
          FreNodeReference {
            "$$owner": [Circular],
            "$$propertyIndex": 2,
            "$$propertyName": "refList",
            "_FRE_pathname": Array [
              "name3",
            ],
            "_FRE_referred": null,
            "typeName": "RefConcept",
          },
          FreNodeReference {
            "$$owner": [Circular],
            "$$propertyIndex": 3,
            "$$propertyName": "refList",
            "_FRE_pathname": Array [
              "name4",
            ],
            "_FRE_referred": null,
            "typeName": "RefConcept",
          },
        ],
        "parseLocation": FreParseLocation {
          "column": 25,
          "line": 53,
        },
      },
    ],
    "parseLocation": FreParseLocation {
      "column": 18,
      "line": 14,
    },
  },
  "_FRE_name": "myName",
  "_FRE_withSeparator": RefsWithSeparator {
    "$$owner": [Circular],
    "$$propertyIndex": undefined,
    "$$propertyName": "withSeparator",
    "$id": "ID-11",
    "$typename": "RefsWithSeparator",
    "_FRE_optList": Array [
      WithDirectRefs {
        "$$owner": [Circular],
        "$$propertyIndex": 0,
        "$$propertyName": "optList",
        "$id": "ID-9",
        "$typename": "WithDirectRefs",
        "_FRE_optRef": FreNodeReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "optRef",
          "_FRE_pathname": Array [
            "nameA",
          ],
          "_FRE_referred": null,
          "typeName": "RefConcept",
        },
        "_FRE_optRefList": Array [
          FreNodeReference {
            "$$owner": [Circular],
            "$$propertyIndex": 0,
            "$$propertyName": "optRefList",
            "_FRE_pathname": Array [
              "nameZ",
            ],
            "_FRE_referred": null,
            "typeName": "RefConcept",
          },
          FreNodeReference {
            "$$owner": [Circular],
            "$$propertyIndex": 1,
            "$$propertyName": "optRefList",
            "_FRE_pathname": Array [
              "nameY",
            ],
            "_FRE_referred": null,
            "typeName": "RefConcept",
          },
          FreNodeReference {
            "$$owner": [Circular],
            "$$propertyIndex": 2,
            "$$propertyName": "optRefList",
            "_FRE_pathname": Array [
              "nameX",
            ],
            "_FRE_referred": null,
            "typeName": "RefConcept",
          },
        ],
        "_FRE_ref": FreNodeReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "ref",
          "_FRE_pathname": Array [
            "someName",
          ],
          "_FRE_referred": null,
          "typeName": "RefConcept",
        },
        "_FRE_refList": Array [
          FreNodeReference {
            "$$owner": [Circular],
            "$$propertyIndex": 0,
            "$$propertyName": "refList",
            "_FRE_pathname": Array [
              "name1",
            ],
            "_FRE_referred": null,
            "typeName": "RefConcept",
          },
          FreNodeReference {
            "$$owner": [Circular],
            "$$propertyIndex": 1,
            "$$propertyName": "refList",
            "_FRE_pathname": Array [
              "name2",
            ],
            "_FRE_referred": null,
            "typeName": "RefConcept",
          },
          FreNodeReference {
            "$$owner": [Circular],
            "$$propertyIndex": 2,
            "$$propertyName": "refList",
            "_FRE_pathname": Array [
              "name3",
            ],
            "_FRE_referred": null,
            "typeName": "RefConcept",
          },
          FreNodeReference {
            "$$owner": [Circular],
            "$$propertyIndex": 3,
            "$$propertyName": "refList",
            "_FRE_pathname": Array [
              "name4",
            ],
            "_FRE_referred": null,
            "typeName": "RefConcept",
          },
        ],
        "parseLocation": FreParseLocation {
          "column": 25,
          "line": 80,
        },
      },
      WithDirectRefs {
        "$$owner": [Circular],
        "$$propertyIndex": 1,
        "$$propertyName": "optList",
        "$id": "ID-10",
        "$typename": "WithDirectRefs",
        "_FRE_optRef": FreNodeReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "optRef",
          "_FRE_pathname": Array [
            "nameA",
          ],
          "_FRE_referred": null,
          "typeName": "RefConcept",
        },
        "_FRE_optRefList": Array [
          FreNodeReference {
            "$$owner": [Circular],
            "$$propertyIndex": 0,
            "$$propertyName": "optRefList",
            "_FRE_pathname": Array [
              "nameZ",
            ],
            "_FRE_referred": null,
            "typeName": "RefConcept",
          },
          FreNodeReference {
            "$$owner": [Circular],
            "$$propertyIndex": 1,
            "$$propertyName": "optRefList",
            "_FRE_pathname": Array [
              "nameY",
            ],
            "_FRE_referred": null,
            "typeName": "RefConcept",
          },
          FreNodeReference {
            "$$owner": [Circular],
            "$$propertyIndex": 2,
            "$$propertyName": "optRefList",
            "_FRE_pathname": Array [
              "nameX",
            ],
            "_FRE_referred": null,
            "typeName": "RefConcept",
          },
        ],
        "_FRE_ref": FreNodeReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "ref",
          "_FRE_pathname": Array [
            "someName",
          ],
          "_FRE_referred": null,
          "typeName": "RefConcept",
        },
        "_FRE_refList": Array [
          FreNodeReference {
            "$$owner": [Circular],
            "$$propertyIndex": 0,
            "$$propertyName": "refList",
            "_FRE_pathname": Array [
              "name1",
            ],
            "_FRE_referred": null,
            "typeName": "RefConcept",
          },
          FreNodeReference {
            "$$owner": [Circular],
            "$$propertyIndex": 1,
            "$$propertyName": "refList",
            "_FRE_pathname": Array [
              "name2",
            ],
            "_FRE_referred": null,
            "typeName": "RefConcept",
          },
          FreNodeReference {
            "$$owner": [Circular],
            "$$propertyIndex": 2,
            "$$propertyName": "refList",
            "_FRE_pathname": Array [
              "name3",
            ],
            "_FRE_referred": null,
            "typeName": "RefConcept",
          },
          FreNodeReference {
            "$$owner": [Circular],
            "$$propertyIndex": 3,
            "$$propertyName": "refList",
            "_FRE_pathname": Array [
              "name4",
            ],
            "_FRE_referred": null,
            "typeName": "RefConcept",
          },
        ],
        "parseLocation": FreParseLocation {
          "column": 25,
          "line": 92,
        },
      },
    ],
    "_FRE_partList": Array [],
    "parseLocation": FreParseLocation {
      "column": 25,
      "line": 80,
    },
  },
  "parseLocation": FreParseLocation {
    "column": 1,
    "line": 1,
  },
}
`;
